Implemented crafting table model & render, Added localization for table, Added recipe

--- a/src/main/resources/assets/wowjudo/lang/en_US.lang
+++ b/src/main/resources/assets/wowjudo/lang/en_US.lang
@@ -2,3 +2,4 @@ item.wowjudo:explosiveRemote.name=C4 Remote
 
 tile.wowjudo:c4.name=C4
 tile.wowjudo:campFire.name=Camp Fire
+tile.wowjudo:craftingTable.name=Workbench
