Fixed rifle ammo name

--- a/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
+++ b/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
@@ -18,4 +18,4 @@ ammoType.wjsurvialmod:handgun.name=Handgun Ammo
 gun.wjsurvialmod:rifle.name=Rifle
 clip.wjsurvialmod:rifle.name=Rifle Clip
 ammo.wjsurvialmod:rifle.name=Rifle Round
-ammoType.wjsurvialmod:rifle.name=Handgun Ammo
+ammoType.wjsurvialmod:rifle.name=Rifle Ammo
