--- a/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
+++ b/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
@@ -19,3 +19,7 @@ gun.wjsurvialmod:rifle.name=Rifle
 clip.wjsurvialmod:rifle.name=Rifle Clip
 ammo.wjsurvialmod:rifle.name=Rifle Round
 ammoType.wjsurvialmod:rifle.name=Rifle Ammo
+
+gun.wjsurvialmod:rpg.name=RPG Launcher
+ammo.wjsurvialmod:rpg.name=RPG Round
+ammoType.wjsurvialmod:rpg.name=RPG Ammo
