--- a/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
+++ b/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
@@ -23,3 +23,8 @@ ammoType.wjsurvialmod:rifle.name=Rifle Ammo
 gun.wjsurvialmod:rpg.name=RPG Launcher
 ammo.wjsurvialmod:rpg.name=RPG Round
 ammoType.wjsurvialmod:rpg.name=RPG Ammo
+
+
+tile.wjsurvialmod:powerGen.name=Fuel Generator
+tile.wjsurvialmod:powerGen.gui.name=Fuel Generator
+tile.wjsurvialmod:powerGen.gui.inventory.name=Inventory
