--- a/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
+++ b/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
@@ -33,3 +33,7 @@ ammo.wjsurvialmod:sentry.name=Minigun Sentry Round
 tile.wjsurvialmod:powerGen.name=Fuel Generator
 tile.wjsurvialmod:powerGen.gui.name=Fuel Generator
 tile.wjsurvialmod:powerGen.gui.inventory.name=Inventory
+
+tile.wjsurvialmod:wall.iron.name=Metal Wall
+tile.wjsurvialmod:wall.stone.name=Stone Wall
+tile.wjsurvialmod:wall.wood.name=Wood Wall
