--- a/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
+++ b/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
@@ -34,10 +34,10 @@ tile.wjsurvialmod:powerGen.name=Fuel Generator
 tile.wjsurvialmod:powerGen.gui.name=Fuel Generator
 tile.wjsurvialmod:powerGen.gui.inventory.name=Inventory
 
-tile.wjsurvialmod:wall.iron.name=Metal Wall
-tile.wjsurvialmod:wall.iron.0.name=Metal Wall
-tile.wjsurvialmod:wall.iron.1.name=Metal Floor
-tile.wjsurvialmod:wall.iron.2.name=Metal Roof
+tile.wjsurvialmod:wall.metal.name=Metal Wall
+tile.wjsurvialmod:wall.metal.0.name=Metal Wall
+tile.wjsurvialmod:wall.metal.1.name=Metal Floor
+tile.wjsurvialmod:wall.metal.2.name=Metal Roof
 
 tile.wjsurvialmod:wall.stone.name=Stone Wall
 tile.wjsurvialmod:wall.stone.0.name=Stone Wall
