--- a/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
+++ b/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
@@ -20,6 +20,11 @@ clip.wjsurvialmod:rifle.name=Rifle Clip
 ammo.wjsurvialmod:rifle.name=Rifle Round
 ammoType.wjsurvialmod:rifle.name=Rifle Ammo
 
+gun.wjsurvialmod:empgun.name=Emp Gun
+clip.wjsurvialmod:empgun.name=Emp Battery
+ammo.wjsurvialmod:empgun.name=Emp Cell
+ammoType.wjsurvialmod:empgun.name=EMP Gun Ammo
+
 gun.wjsurvialmod:rpg.name=RPG Launcher
 ammo.wjsurvialmod:rpg.name=RPG Round
 ammoType.wjsurvialmod:rpg.name=RPG Ammo
@@ -29,6 +34,8 @@ sentry.wjsurvialmod:sentry.name=Minigun Sentry
 clip.wjsurvialmod:sentry.clip.name=Minigun Sentry Ammo Box
 ammoType.wjsurvialmod:sentry.name=Minigun Sentry Ammo
 ammo.wjsurvialmod:sentry.name=Minigun Sentry Round
+
+throwable.wjsurvialmod:grenade.name=Grenade
 
 tile.wjsurvialmod:powerGen.name=Fuel Generator
 tile.wjsurvialmod:powerGen.gui.name=Fuel Generator
