Implemented and textures crafting parts as requested

--- a/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
+++ b/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
@@ -55,3 +55,18 @@ tile.wjsurvialmod:wall.wood.name=Wood Wall
 tile.wjsurvialmod:wall.wood.0.name=Wood Wall
 tile.wjsurvialmod:wall.wood.1.name=Wood Floor
 tile.wjsurvialmod:wall.wood.2.name=Wood Roof
+
+item.wjsurvialmod:craftingItem.name=Crafting Item
+item.wjsurvialmod:craftingItem.rod.uranium.name=Uranium Rod
+item.wjsurvialmod:craftingItem.wire.copper.name=Copper Wire
+item.wjsurvialmod:craftingItem.wire.silver.name=Silver Wire
+item.wjsurvialmod:craftingItem.rock.name=Rock
+item.wjsurvialmod:craftingItem.ingot.titanium.name=Titanium Ingot
+item.wjsurvialmod:craftingItem.linen.name=Linen
+item.wjsurvialmod:craftingItem.sapphire.refined.name=Refined Sapphire
+item.wjsurvialmod:craftingItem.ruby.refined.name=Refined Ruby
+item.wjsurvialmod:craftingItem.polymer.name=Polymer
+item.wjsurvialmod:craftingItem.microchip.name=Microchip
+item.wjsurvialmod:craftingItem.module.turret.power=Turret Power Module
+item.wjsurvialmod:craftingItem.module.turret.control=Turret Control Module
+item.wjsurvialmod:craftingItem.module.turret.aiming=Turret Aiming Module
