Fixed pre-init firing twice causing key bind to register twice, Implemented localization for keybind

--- a/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
+++ b/src/main/resources/assets/wjsurvialmod/lang/en_US.lang
@@ -1,4 +1,6 @@
-itemGroup.wowjudo=WJ's Survial Mod
+itemGroup.wjsurvialmod=WJ's Survival Mod
+
+key.wjsurvialmod:gui.stats.open=Open Stats GUI
 
 item.wjsurvialmod:explosiveRemote.name=C4 Remote
 
